@@ -1,3 +1,9 @@
+2005-09-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* malloc.c (struct malloc_chunk): Fix comment typo.
+	(public_cALLOc): For mmapped chunks and perturb_byte != 0,
+	don't clear SIZE_SZ bytes more than should be cleared.
+
 2005-09-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* inet/getnetgrent_r.c: Include assert.
